auth-rbac/hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
spec:
  ingressClassName: nginx
  rules:
  - host: hello.stage.lan
    http:
      paths:
      - backend:
          service:
            name: hello
            port:
              number: 80
        path: /
        pathType: Prefix
