auth-rbac/hello-netpol-allow-ok.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-allow-ok
  namespace: bob
spec:
  podSelector:
    matchLabels:
      app: hello
  ingress:
    - from:
      - podSelector:
          matchLabels:
            np: ok
